# hvac_ai_model_detector

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  readme.txt
AI-Models/: det_ppocrv3_en.onnx  hvac_fullspec.onnx
Deploy/: CMakeCache.txt  CMakeLists.txt  README.md  conanfile.txt  main.cpp
Deploy/controllers/: controller_manager.cpp  controller_manager.h  controllers.cpp  controllers.h  health_controller.cpp  health_controller.h  prediction_controller.cpp  prediction_controller.h
Deploy/models/: hvac_model.h
Deploy/services/: ai_service.cpp  ai_service.h  phi3_service.cpp  phi3_service.h
Hvac-Label-Specification-AI/: hvac_ner_dataset_clean_v10.json  hvac_ner_validation_clean.json  train.py
OCR/: setup_paddle_ocr.sh
Prototype/: best.pt  train.py
sql/tables/: models.sql
